@@ -110,6 +110,8 @@ AddOutputFilter INCLUDES .shtml
 
     <table border="1">
     <tr><th>Element</th><th>Description</th></tr>
+    <tr><td><code><a href="#element.comment">comment</a></code></td>
+        <td>SSI comment</td></tr>
     <tr><td><code><a href="#element.config">config</a></code></td>
         <td>configure output formats</td></tr>
     <tr><td><code><a href="#element.echo">echo</a></code></td>
@@ -133,6 +135,17 @@ AddOutputFilter INCLUDES .shtml
     href="#element.exec">exec</a></code> element is provided by
     <module>mod_cgi</module>, and will only be available if this
     module is loaded.</p>
+
+    <section id="element.comment"><title>The comment Element</title>
+      <p>This command doesn't output anything. Its only use is to
+      add comments within a file. These comments are not printed.</p>
+
+      <p>This syntax is available in version 2.5 and later.</p>
+
+      <example>
+      &lt;!--#comment Blah Blah Blah --&gt;
+      </example>
+    </section> <!-- /comment -->
 
     <section id="element.config"><title>The config Element</title>
       <p>This command controls various aspects of the parsing. The
